# rag-qa

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: pre-commit.yml  pull-requests.yml
rag/: agent.py  cli.py  embeddings.py  llm.py  retriever.py
rag/utils/: validator.py
storage/: E10 - Document 3.pkl  E10 - Document 3_basic.pkl  E10 - Document 3_semantic.pkl  E3 Structure - Document 2.pkl  E3 Structure - Document 2_basic.pkl  E3 Structure - Document 2_semantic.pkl  ICD - Document 1.pkl  ICD - Document 1_basic.pkl  ICD - Document 1_semantic.pkl
tests/: conftest.py  test_agent.py  test_pickling.py  test_qvalidator.py  test_retriever.py  test_semantic_chunking.py  test_tf_idf_fallback.py
