[build-systems]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-qa"
version = "0.1.0"
description = "Local mini RAG / Agentic Q&A over a small PDF corpus"
readme = "README.md"
authors = [{ name = "Georgia Giannokosta" }]
requires-python = ">=3.12"

[project.scripts]
rag-qa = "rag.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rag*"]